[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/battle/battle_controller.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/battle/monster_battle_display.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/battle/action_menu.tscn" id="3"]

[node name="BattleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.25, 0.3, 1)

[node name="BattleUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBox" type="HBoxContainer" parent="BattleUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_constants/separation = 40
alignment = 1

[node name="PlayerSide" type="VBoxContainer" parent="BattleUI/HBox"]
layout_mode = 2

[node name="PlayerLabel" type="Label" parent="BattleUI/HBox/PlayerSide"]
layout_mode = 2
text = "YOUR MONSTER"
horizontal_alignment = 1

[node name="PlayerDisplay" parent="BattleUI/HBox/PlayerSide" instance=ExtResource("2")]
layout_mode = 2

[node name="EnemySide" type="VBoxContainer" parent="BattleUI/HBox"]
layout_mode = 2

[node name="EnemyLabel" type="Label" parent="BattleUI/HBox/EnemySide"]
layout_mode = 2
text = "WILD MONSTER"
horizontal_alignment = 1

[node name="EnemyDisplay" parent="BattleUI/HBox/EnemySide" instance=ExtResource("2")]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="BattleUI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
text = "A wild monster appeared!"
horizontal_alignment = 1

[node name="ActionPanel" parent="BattleUI" instance=ExtResource("3")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -160.0
grow_horizontal = 0
grow_vertical = 0
